--- a/index.htm
+++ b/index.htm
@@ -74,7 +74,7 @@ body {
 <br>
 <br>
 <!-- LINK TO BIOGRAPHY -->
-<a href="https://drive.google.com/uc?id=1Jsl22jk1AHnmBSGC3uUnuzliVxPvQ3vy">about me.</a>
+<a href="https://edgeeepangan.github.io/website/about.htm">about me.</a>
 <br>
 
 <!-- LINK TO PORTFOLIO -->
@@ -82,11 +82,11 @@ body {
 <br>
 
 <!-- LINK TO RESUME -->
-<a href="https://drive.google.com/uc?id=1yLZUYb8xN_eN6win0v3z0zfPg1LRJ9gq" target="_blank">resume.</a>
+<a href="https://edgeeepangan.github.io/website/works.htm" target="_blank">resume.</a>
 <br>
 
 <!-- LINK TO SCHOOL -->
-<a href="https://drive.google.com/open?id=1ftXjWLJbkKmALtrVbE0p7VRoSBt_F8xq">my school.</a>
+<a href="https://edgeeepangan.github.io/website/college.htm">my school.</a>
 
 <div class="bottomnav">
   <a href="https://www.facebook.com/undefined.element" target="_blank">facebook.</a>
