--- a/index.htm
+++ b/index.htm
@@ -78,11 +78,11 @@ body {
 <br>
 
 <!-- LINK TO PORTFOLIO -->
-<a href="https://drive.google.com/uc?id=16R4OBLITNyqJrqvJ3M3jNjQjVrAx4ZzM">my works.</a>
+<a href="https://edgeeepangan.github.io/website/works.htm">my works.</a>
 <br>
 
 <!-- LINK TO RESUME -->
-<a href="https://edgeeepangan.github.io/website/works.htm" target="_blank">resume.</a>
+<a href="https://drive.google.com/uc?id=1yLZUYb8xN_eN6win0v3z0zfPg1LRJ9gq" target="_blank">resume.</a>
 <br>
 
 <!-- LINK TO SCHOOL -->
