--- a/index.htm
+++ b/index.htm
@@ -78,7 +78,7 @@ body {
 <br>
 
 <!-- LINK TO PORTFOLIO -->
-<a href="https://edgeeepangan.github.io/website/">my works.</a>
+<a href="https://edgeeepangan.github.io/website/works.htm">my works.</a>
 <br>
 
 <!-- LINK TO RESUME -->
